@@ -8,5 +8,5 @@
 	},
 	"actionPoints": 20,
 	"maxHP": 30,
-	"special":"const { x, y } = await userChooseLocation(1, 1, STRAIGHT_LINES);const self = getSelf();const xOff = x - self.x;const yOff = y - self.y;console.log(xOff, yOff, x, y, self.x, self.y);let curX = self.x;let curY = self.y;while (true) {curX += xOff;curY += yOff;let obj = getObjectAtCoords(curX, curY, ObjectType.DESTROYABLE_OBJECTS);if (obj) {obj.damage(100);self.moveTo(curX, curY);await sleep(100);continue;}if (!isSpaceWalkable(curX, curY) ||getObjectAtCoords(curX, curY, ObjectType.CHARACTERS)) {break;}obj = getObjectAtCoords(curX, curY, ObjectType.ENEMIES);if (obj) {break;}obj = getObjectAtCoords(curX, curY, ObjectType.OBJECTS);if (obj) {break;}self.moveTo(curX, curY);await sleep(100);}"
+	"special":"const { x, y } = await userChooseLocation(1, 1, STRAIGHT_LINES);const self = getSelf();const xOff = x - self.x;const yOff = y - self.y;let curX = self.x;let curY = self.y;while (true) {curX += xOff;curY += yOff;let obj = getObjectAtCoords(curX, curY, ObjectType.DESTROYABLE_OBJECTS);if (obj) {obj.damage(100);self.moveTo(curX, curY);await sleep(100);continue;}if (!isSpaceWalkable(curX, curY) ||getObjectAtCoords(curX, curY, ObjectType.CHARACTERS)) {break;}obj = getObjectAtCoords(curX, curY, ObjectType.ENEMIES);if (obj) {break;}obj = getObjectAtCoords(curX, curY, ObjectType.OBJECTS);if (obj) {break;}self.moveTo(curX, curY);await sleep(100);}"
 }
